updated with UC Bren logo

--- a/coqui_lef.Rmd
+++ b/coqui_lef.Rmd
@@ -221,7 +221,7 @@ and to our MEDS 2021 classmates - we appreciate your daily encouragement, advice
 
 <center>
 
-![](images/bren_meds_hex.png){width=20%}
+![](images/uc_bren_logo.PNG){width=70%}  ![](images/bren_meds_hex.png){width=20%}
 
 <center>
 
